<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeActivity"
    android:background="@drawable/background_home">

  <TextView
      android:text="@string/app_name"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/textViewAppName"
      android:textColor="@color/white"
      android:textAlignment="textStart"
      android:textSize="20sp"
      android:textStyle="bold"
      android:layout_marginTop="10dp"
      android:layout_marginStart="10dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/textViewWeb"/>

  <TextView
      android:text="@string/meganopus_link"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/textViewWeb"
      android:textColor="@color/white"
      android:textAlignment="textEnd"
      android:textSize="20sp"
      android:textStyle="bold"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toEndOf="@id/textViewAppName"
      app:layout_constraintEnd_toEndOf="parent"/>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/RecyclerViewContainer"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="10dp"
      app:layout_constraintTop_toBottomOf="@id/textViewAppName"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/floatingActionButtonAdd"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:clickable="true"
      app:srcCompat="@drawable/ic_baseline_add"
      android:focusable="true"
      android:layout_marginEnd="30dp"
      android:layout_marginBottom="45dp"
      android:scaleType="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:contentDescription="@string/add_button"/>

  <com.google.android.gms.ads.AdView
      xmlns:ads="http://schemas.android.com/apk/res-auto"
      android:id="@+id/adViewBanner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_alignParentBottom="true"
      ads:adSize="BANNER"
      ads:adUnitId="ca-app-pub-4655087742659933/3827975548"
      ads:layout_constraintStart_toStartOf="parent"
      ads:layout_constraintEnd_toEndOf="parent"
      ads:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>