<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FormActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/adViewBanner"
      android:background="@drawable/card_form"
      android:layout_margin="10dp"
      android:padding="10dp">

    <EditText
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:inputType="textPersonName"
        android:hint="@string/title"
        android:ems="10"
        android:id="@+id/editTextTextTitle"
        android:background="@drawable/edit_text"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonSave"
        app:layout_constraintBottom_toTopOf="@id/editTextTextDescription"
        app:layout_constraintVertical_bias="0.0"
        android:importantForAutofill="no"/>

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/buttonSave"
        android:textColor="@color/white"
        android:background="@drawable/button_edit"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextTextTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTextTextDescription"
        app:layout_constraintVertical_bias="0.0"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:hint="@string/description"
        android:ems="10"
        android:id="@+id/editTextTextDescription"
        android:background="@drawable/edit_text"
        android:layout_below="@id/editTextTextTitle"
        app:layout_constraintTop_toBottomOf="@id/buttonSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="top"
        android:importantForAutofill="no"/>

  </androidx.constraintlayout.widget.ConstraintLayout>


  <com.google.android.gms.ads.AdView
      xmlns:ads="http://schemas.android.com/apk/res-auto"
      android:id="@+id/adViewBanner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_alignParentBottom="true"
      ads:adSize="BANNER"
      ads:adUnitId="ca-app-pub-4655087742659933/3827975548"
      ads:layout_constraintStart_toStartOf="parent"
      ads:layout_constraintEnd_toEndOf="parent"
      ads:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>